--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "dev": "vite --open",
     "build": "tsc && vite build",
     "preview": "vite preview --open",
-    "test": "vitest"
+    "test": "vitest --coverage"
   },
   "devDependencies": {
     "@stylistic/eslint-plugin-js": "^1.4.1",
     "@testing-library/jest-dom": "^6.1.4",
     "@types/jest": "^29.5.10",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@vitest/coverage-v8": "^0.34.6",
     "eslint": "^8.54.0",
     "eslint-config-standard-with-typescript": "^40.0.0",
     "eslint-plugin-import": "^2.29.0",
